--- a/design/bill.html
+++ b/design/bill.html
@@ -92,7 +92,7 @@
                                     </div>
                                     <div class="row row-sm stats-container">
                                         <div class="col-xs-12 stat-col">
-                                            <div class="stat-icon"> <i class="fa fa-rub"></i> </div>
+                                            <div class="stat-icon"> <i class="fa fa-RUB"></i> </div>
                                             <div class="stat">
                                                 <div class="value">80.560</div>
                                             </div>
